@@ -36,12 +36,6 @@
 #include "Page.h"
 #include <windows.h>
 
-#if USE(CG)
-extern "C" {
-bool CGDisplayUsesInvertedPolarity(void);
-}
-#endif
-
 namespace WebCore {
 
 // Returns info for the default monitor if widget is NULL
@@ -92,11 +86,7 @@ bool screenIsMonochrome(Widget* widget)
 
 bool screenHasInvertedColors()
 {
-#if USE(CG)
-    return CGDisplayUsesInvertedPolarity();
-#else
     return false;
-#endif
 }
 
 FloatRect screenRect(Widget* widget)
